[frontendActions] Use force push only when sync to remote status requires it